--- a/roadmap.Rmd
+++ b/roadmap.Rmd
@@ -12,7 +12,7 @@ output:
 
 ## Honors Thesis Roadmap
 
-The honors thesis project is a capstone research experience for undergraduates in the Department of Psychology at Brooklyn College. This document provides a roadmap for students and faculty advisors for the completion of an honors thesis project.
+The honors thesis project is a capstone research experience for undergraduates in the Department of Psychology at Brooklyn College. This document provides a road map for students and faculty advisors for the completion of an honors thesis project.
 
 There are two important points to make at the outset.
 
@@ -42,7 +42,7 @@ In some circumstances, a student may register for a single PSYC 500X course, wit
 
 ## Outline of a typical honors project
 
-1.	A student takes PSYC 2001 and gains research experience in a particular lab, and is mentored by a particular faculty member. This first research experience would generally occur in sophomore or junior year. PSYC 2001 prepares the student with basic research skills in the lab that they could then put to use in their senior year, if they were to complete a honors project in the same lab. If the student decides to pursue an honors project with a different faculty advisor, they may have some transferrable research skills to quickly begin research with a different advisor.
+1.	A student takes PSYC 2001 and gains research experience in a particular lab, and is mentored by a particular faculty member. This first research experience would generally occur in sophomore or junior year. PSYC 2001 prepares the student with basic research skills in the lab that they could then put to use in their senior year, if they were to complete a honors project in the same lab. If the student decides to pursue an honors project with a different faculty advisor, they may have some transferable research skills to quickly begin research with a different advisor.
 2.	During 2001, the student and mentor discuss the possibility of a honors project, to gauge interest, and discuss possible research projects that could be completed in the two-semester time-frame. 
 3.	When a student and mentor decide to pursue a two-semester honors project, they discuss the scope the project in advance of the student registering for a PSYC 500X course. As a part of the form for registering into a PSYC 500X course, the mentor is given the task of describing the nature of the honors project (given how they see the project unfolding at that time
 4.	A student begins the honors project process by registering for PSYC 500X (typically PSYC 5001 if they have not taken PSYC 500X courses previously). The student and mentor indicate on the form that this PSYC 500X is part of the two-semester honors project. The student completes one semester of work on their honors project, and completes an interim written report at the end of the semester
@@ -52,11 +52,11 @@ In some circumstances, a student may register for a single PSYC 500X course, wit
 
 The research process in Psychology is highly varied. There are different kinds of research questions, different kinds of research methods, and different kinds of overall training goals in different domains in Psychology. As a result, individual mentors offer somewhat unique training experience for students pursuing the honors project. At the same time, there are many common features that mentors and students may encounter during the project, these are often the same kinds of things that any researcher encounters whenever they conduct research.
 
-For example, it is common for a research question to change over time. As you learn about something through research, you may discover that your initial questions aren't as good as your new questions. You may discover that your project isn't working out as planned. You may want to try something new. Or, you might get lucky and everything works out. All of these things happen. As a result, it is not uncommon for an honors project to switch gears at some point across the semesters. That is ok, your mentor is there to help guide you, and your mentor has certainly switched gears before when something didn't work out. Your mentor is also there to help structure the project so that you can complete your research project within two semesters. Because honors projects are a big commitment in terms of time for everyone involved, it is worth outlining some general suggestions for planning out an honors project. This helps everyone stay on track. The planning process involves both the mentor and student. The following suggestions are in three parts: what not to do, structure of an honors project, and planning the project
+For example, it is common for a research question to change over time. As you learn about something through research, you may discover that your initial questions aren't as good as your new questions. You may discover that your project isn't working out as planned. You may want to try something new. Or, you might get lucky and everything works out. All of these things happen. As a result, it is not uncommon for an honors project to switch gears at some point across the semesters. That is OK, your mentor is there to help guide you, and your mentor has certainly switched gears before when something didn't work out. Your mentor is also there to help structure the project so that you can complete your research project within two semesters. Because honors projects are a big commitment in terms of time for everyone involved, it is worth outlining some general suggestions for planning out an honors project. This helps everyone stay on track. The planning process involves both the mentor and student. The following suggestions are in three parts: what not to do, structure of an honors project, and planning the project
 
 ### What not to do
 
-There are as many ways to complete an honors project as there are students and faculty. So, there is no doubt that some of these "what-not-to-does" may be ok in some circumstances. The main suggestion is, do not get involved in an honors project if nobody knows what is going on. For example, if you are a student and you want to complete a honors project on your very own idea, but you can't find a mentor to supervise you, this places you in a tough spot. You will not be able to receive expert advice on the question you are asking, and nobody will be around to help you with the project. For a student in this situation, the recommendation is to find a mentor who is doing research that is close to your interests, this way you learn some skills and topics that you might not be aware of, and this will help you pursue your interests in the future. Also, if you are a faculty member, it might not be the best idea to have students pursue research topics completely independently, with minimal supervision. The honors project is intended to be mentored so that students receive training from the advisor. At the same time, some students who already have extensive research experience may be in the position to complete an honors project mostly independently, that is great, and whether this is something that occurs is left up to discussions between the mentor and student.
+There are as many ways to complete an honors project as there are students and faculty. So, there is no doubt that some of these "what-not-to-does" may be OK in some circumstances. The main suggestion is, do not get involved in an honors project if nobody knows what is going on. For example, if you are a student and you want to complete a honors project on your very own idea, but you can't find a mentor to supervise you, this places you in a tough spot. You will not be able to receive expert advice on the question you are asking, and nobody will be around to help you with the project. For a student in this situation, the recommendation is to find a mentor who is doing research that is close to your interests, this way you learn some skills and topics that you might not be aware of, and this will help you pursue your interests in the future. Also, if you are a faculty member, it might not be the best idea to have students pursue research topics completely independently, with minimal supervision. The honors project is intended to be mentored so that students receive training from the advisor. At the same time, some students who already have extensive research experience may be in the position to complete an honors project mostly independently, that is great, and whether this is something that occurs is left up to discussions between the mentor and student.
 
 ## Structure of an honors project
 
